--- a/css/styles.css
+++ b/css/styles.css
@@ -11,22 +11,11 @@ a {
 
 button {
   cursor: pointer;
-  font-weight: 500;
-  font-size: 16px;
-  line-height: 1.5;
-  letter-spacing: 0.04em;
-  color: #fff;
-  border-radius: 4px;
-  padding: 16px 32px;
-  width: 169px;
-  height: 56px;
-  box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.15);
-  background: #4d5ae5;
 }
 
 body {
   font-family: "Roboto", sans-serif;
-  color: #2e2f42;
+  color: #434455;
   background: #fff;
 }
 
@@ -51,6 +40,10 @@ body {
 
 .logo-color {
   color: #4d5ae5;
+}
+
+.logo-color-header {
+  color: #2e2f42;
 }
 
 .menu-link {
@@ -78,10 +71,24 @@ body {
   background-color: #2e2f42;
   font-weight: 700;
   font-size: 56px;
-  line-height: 1.07143;
+  line-height: 1.07;
   letter-spacing: 0.02em;
   text-align: center;
   color: #fff;
+}
+
+.buy-now-btn {
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.04em;
+  color: #fff;
+  background-color: #404bbf;
+}
+
+.buy-now-btn:hover,
+.buy-now-btn:focus {
+  color: #404bbf;
 }
 
 .advantages-list-title {
@@ -108,9 +115,19 @@ body {
   color: #2e2f42;
 }
 
+.team {
+  background-color: #f4f4fd;
+}
+
+.section-title {
+  text-transform: capitalize;
+}
+
+.team-list {
+  background-color: #ffffff;
+}
+
 .team-list-img {
-  box-shadow: 0 2px 1px 0 rgba(46, 47, 66, 0.08),
-    0 1px 1px 0 rgba(46, 47, 66, 0.16), 0 1px 6px 0 rgba(46, 47, 66, 0.08);
   background: #fff;
 }
 
@@ -135,10 +152,11 @@ body {
 .portfolio-section {
   font-weight: 700;
   font-size: 36px;
-  line-height: 1.11111;
+  line-height: 1.11;
   letter-spacing: 0.02em;
   text-align: center;
   color: #2e2f42;
+  text-transform: capitalize;
 }
 
 .portfolio-list-title {
@@ -157,6 +175,10 @@ body {
   color: #434455;
 }
 
+.portfolio-img {
+  background: #fff;
+}
+
 .footer-text {
   font-weight: 400;
   font-size: 16px;
@@ -165,6 +187,10 @@ body {
   color: #f4f4fd;
 }
 
-.portfolio-img {
-  background: #fff;
+.page-footer {
+  background-color: #2e2f42;
+}
+
+.logo-color-studio {
+  color: #f4f4fd;
 }
