--- a/css/styles.css
+++ b/css/styles.css
@@ -22,11 +22,19 @@ body {
 /* Header Styles */
 
 .contacts-list-link {
+  font-family: "Roboto", sans-serif;
   font-weight: 400;
   font-size: 16px;
   line-height: 1.5;
   letter-spacing: 0.02em;
   color: #434455;
+  font-style: normal;
+}
+
+.contacts-list-link:hover,
+.contacts-list-link:focus {
+  color: #404bbf;
+  color: #404bbf;
 }
 
 .page-logo {
@@ -62,7 +70,7 @@ body {
 .main-title {
   font-weight: 700;
   font-size: 56px;
-  line-height: 1.07143;
+  line-height: 1.07;
   letter-spacing: 0.02em;
   text-align: center;
   color: #fff;
@@ -84,7 +92,7 @@ body {
   line-height: 1.5;
   letter-spacing: 0.04em;
   color: #fff;
-  background-color: #404bbf;
+  background-color: #4d5ae5;
 }
 
 .buy-now-btn:hover,
@@ -200,7 +208,7 @@ body {
   font-family: "Raleway", sans-serif;
   font-weight: 700;
   font-size: 18px;
-  line-height: 1.16667;
+  line-height: 1.17;
   letter-spacing: 0.03em;
   text-transform: uppercase;
   color: #4d5ae5;
